--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <html>
   <head>
     <title>Mountain Rentals</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -10,13 +15,17 @@
       <nav class="nav">
         <div class="nav-center">
           <div class="nav-logo">
-            <img src="/resources/nav-logo.jpg" class="nav-logo" alt="navbar company logo" />
+            <img
+              src="/resources/nav-logo.jpg"
+              class="nav-logo"
+              alt="navbar company logo" />
+            <h2>Mountain Rental Properties</h2>
           </div>
           <div class="nav-links">
-            <a href="index.html" <li>Home</li> </a>
-            <a href="index.html" <li>Home</li> </a>
-            <a href="index.html" <li>Home</li> </a>
-            <a href="index.html" <li>Home</li> </a>
+            <a href="index.html"><li>Home</li></a>
+            <a href="about.html"><li>About</li></a>
+            <a href="properties.html"><li>Properties</li></a>
+            <a href="contact.html"><li>Contact</li></a>
           </div>
         </div>
       </nav>
