initial navbar responsive layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap"
       rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/521ed9ec23.js"
+      crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -19,16 +22,22 @@
               src="/resources/nav-logo.jpg"
               class="nav-logo"
               alt="navbar company logo" />
-            <h2>Mountain Rental Properties</h2>
+            <h3>Mountain Rental Properties</h3>
           </div>
           <div class="nav-links">
-            <a href="index.html"><li>Home</li></a>
-            <a href="about.html"><li>About</li></a>
-            <a href="properties.html"><li>Properties</li></a>
-            <a href="contact.html"><li>Contact</li></a>
+            <a href="index.html" class="nav-link"><li>Home</li></a>
+            <a href="about.html" class="nav-link"><li>About</li></a>
+            <a href="properties.html" class="nav-link"><li>Properties</li></a>
+            <a href="contact.html" class="nav-link"><li>Contact</li></a>
+          </div>
+          <div class="nav-btn">
+            <button>
+              <i class="fa-solid fa-bars"></i>
+            </button>
           </div>
         </div>
       </nav>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
