add hero and main inital layout

--- a/index.html
+++ b/index.html
@@ -24,20 +24,42 @@
               alt="navbar company logo" />
             <h3>Mountain Rental Properties</h3>
           </div>
-          <div class="nav-links">
-            <a href="index.html" class="nav-link"><li>Home</li></a>
-            <a href="about.html" class="nav-link"><li>About</li></a>
-            <a href="properties.html" class="nav-link"><li>Properties</li></a>
-            <a href="contact.html" class="nav-link"><li>Contact</li></a>
-          </div>
           <div class="nav-btn">
             <button>
               <i class="fa-solid fa-bars"></i>
             </button>
           </div>
-        </div>
       </nav>
-    </div>
+          <div class="nav-links hide">
+            <a href="index.html"><li class="nav-link">Home</li></a>
+            <a href="about.html"><li class="nav-link">About</li></a>
+            <a href="properties.html"><li class="nav-link">Properties</li></a>
+            <a href="contact.html""><li class="nav-link">Contact</li></a>
+          </div>
+          <div class="hero-ctn">
+            <div class="hero-text">
+                <h1>Your next adventure</h1>
+                <h1>awaits...</h1>
+             </div>   
+              <img 
+              src="/resources/hero-img.avif" 
+              alt="man overlooking mountains" 
+              class="hero-img">
+          </div>
+          <div class="main">
+            <div class="main-img">
+              <img 
+              src="/resources/main-img.avif" 
+              alt="main img of mountain cabin" 
+              class="main-img">
+            </div>
+            <div class="main-content">
+              <h2>Deeply intimate experiences with nature</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, dolorem quas tempore voluptatibus aliquid.</p> 
+            </div>
+          </div>
+        </div>
+       
     <script src="app.js"></script>
   </body>
 </html>
