finish layout for main

--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
               class="hero-img">
           </div>
           <div class="main">
+            <div class="content-ctn">
+              <div class="main-content">
+                <h2>Deeply intimate experiences with nature</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, dolorem quas tempore voluptatibus aliquid.</p> 
+              </div>
+            </div>
             <div class="main-img">
               <img 
               src="/resources/main-img.avif" 
               alt="main img of mountain cabin" 
               class="main-img">
-            </div>
-            <div class="main-content">
-              <h2>Deeply intimate experiences with nature</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, dolorem quas tempore voluptatibus aliquid.</p> 
             </div>
           </div>
         </div>
