add footer html and style

--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
               class="main-img">
             </div>
           </div>
-        </div>
+          <footer class="page-footer">
+            <p>
+              &copy; <span id="date"></span>
+              <span id="footer-logo">Mountain Rental Properties</span>
+              built by
+              <a href="https://github.com/tcurtis14002">Tyler Curtis</a>
+            </p>
+          </footer>
+          </div>
        
     <script src="app.js"></script>
   </body>
