--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
       crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css" />
   </head>
+  <!-- Page---------------------------------------------------------------->
   <body>
     <div class="page">
+<!-- Nav---------------------------------------------------------------->
       <nav class="nav">
         <div class="nav-center">
           <div class="nav-logo">
@@ -36,6 +38,7 @@
             <a href="properties.html"><li class="nav-link">Properties</li></a>
             <a href="contact.html""><li class="nav-link">Contact</li></a>
           </div>
+<!-- Hero---------------------------------------------------------------->
           <div class="hero-ctn">
             <div class="hero-text">
                 <h1>Your next adventure</h1>
@@ -46,6 +49,7 @@
               alt="man overlooking mountains" 
               class="hero-img">
           </div>
+<!-- Main---------------------------------------------------------------->
           <div class="main">
             <div class="content-ctn">
               <div class="main-content">
@@ -60,6 +64,32 @@
               class="main-img">
             </div>
           </div>
+  <!-- Main 2---------------------------------------------------------------->
+          <div class="main2">
+            <div class="content-ctn">
+              <div class="main-content2">
+                <h2>Over 20 properties spread out over dozens of acres of secluded mountain land</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, dolorem quas tempore voluptatibus aliquid.</p> 
+              </div>
+            </div>
+            <div class="main-img2">
+              <img 
+              src="/resources/main-img2.avif" 
+              alt="secluded property in mountains" 
+              class="main-img2">
+            </div>
+          </div>
+  <!-- About---------------------------------------------------------------->
+          <div class="main-about-ctn">
+            <div class="about-content"></div>
+            <div class="about-form">
+              <form action="#">
+                <input type="text">
+                <label for=""></label>
+              </form>
+            </div>
+          </div>
+  <!-- Footer---------------------------------------------------------------->
           <footer class="page-footer">
             <p>
               &copy; <span id="date"></span>
