adjust main-content and p styling

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             <div class="content-ctn">
               <div class="main-content">
                 <h2>Deeply intimate experiences with nature</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, dolorem quas tempore voluptatibus aliquid.</p> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam incidunt iusto mollitia doloribus consectetur natus.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               </div>
             </div>
             <div class="main-img">
