--- a/index.html
+++ b/index.html
@@ -81,15 +81,36 @@
               class="main-img2">
             </div>
           </div>
-  <!-- About---------------------------------------------------------------->
+  <!-- About ---------------------------------------------------------------->
           <div class="main-about-ctn">
-            <div class="about-content"></div>
-            <div class="about-form">
-              <form action="#">
-                <input type="text">
-                <label for=""></label>
-              </form>
+            <div class="about-content">
+              <h2>Ready for more information?</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, natus asperiores. Error obcaecati mollitia dolorum cumque repellat placeat asperiores impedit.</p>
+              <br>
+              <p>Lorem ipsum dolor sit amet.</p>
+              <br><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro veritatis fuga vero iste pariatur a nulla error esse hic, quas, iure molestiae, at similique quis.</p>
             </div>
+            <form action="submit" class="about-form">
+              <div class="form-row">
+                <label for="fname" class="form-label">Your First Name</label>
+                <input type="text" class="form-input" name="fname" id="fname">
+                <br>
+              </div>
+              <div class="form-row">
+                <label for="lname">Your Last Name</label>
+                <input type="text" class="form-input" name="lname" id="lname">
+                <br>
+              </div>
+              <div class="form-row">
+                <label for="email">Your Email</label>
+                <input type="text" class="form-input" name="email" id="email">
+                <br>
+              </div>
+              <div class="form-row">
+                <label for="message">Your Message</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+              </div>
+            </form>
           </div>
   <!-- Footer---------------------------------------------------------------->
           <footer class="page-footer">
@@ -101,7 +122,6 @@
             </p>
           </footer>
           </div>
-       
     <script src="app.js"></script>
   </body>
 </html>
