make nav responsive

--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
               <i class="fa-solid fa-bars"></i>
             </button>
           </div>
+          <div class="nav-links show">
+            <a href="index.html"><li class="nav-link">Home</li></a>
+            <a href="about.html"><li class="nav-link">About</li></a>
+            <a href="properties.html"><li class="nav-link">Properties</li></a>
+            <a href="contact.html"><li class="nav-link">Contact</li></a>
+          </div>
       </nav>
           <div class="nav-links hide">
             <a href="index.html"><li class="nav-link">Home</li></a>
             <a href="about.html"><li class="nav-link">About</li></a>
             <a href="properties.html"><li class="nav-link">Properties</li></a>
-            <a href="contact.html""><li class="nav-link">Contact</li></a>
+            <a href="contact.html"><li class="nav-link">Contact</li></a>
           </div>
 <!-- Hero---------------------------------------------------------------->
           <div class="hero-ctn">
