create layout and style for about page

--- a/about.html
+++ b/about.html
@@ -17,57 +17,63 @@
   <body>
     <div class="page">
 <!-- Nav---------------------------------------------------------------->
-      <nav class="nav">
-        <div class="nav-center">
-          <div class="nav-logo">
-            <img
-              src="/resources/nav-logo.jpg"
-              class="nav-logo"
-              alt="navbar company logo" />
-            <h3>Mountain Rental Properties</h3>
-          </div>
-          <div class="nav-btn">
-            <button>
-              <i class="fa-solid fa-bars"></i>
-            </button>
-          </div>
-      </nav>
-          <div class="nav-links hide">
-            <a href="index.html"><li class="nav-link">Home</li></a>
-            <a href="about.html"><li class="nav-link">About</li></a>
-            <a href="properties.html"><li class="nav-link">Properties</li></a>
-            <a href="contact.html""><li class="nav-link">Contact</li></a>
-          </div>
+<nav class="nav">
+  <div class="nav-center">
+    <div class="nav-logo">
+      <img
+        src="/resources/nav-logo.jpg"
+        class="nav-logo"
+        alt="navbar company logo" />
+      <h3>Mountain Rental Properties</h3>
+    </div>
+    <div class="nav-btn">
+      <button>
+        <i class="fa-solid fa-bars"></i>
+      </button>
+    </div>
+    <div class="nav-links show">
+      <a href="index.html"><li class="nav-link">Home</li></a>
+      <a href="about.html"><li class="nav-link">About</li></a>
+      <a href="properties.html"><li class="nav-link">Properties</li></a>
+      <a href="contact.html"><li class="nav-link">Contact</li></a>
+    </div>
+</nav>
+    <div class="nav-links hide">
+      <a href="index.html"><li class="nav-link">Home</li></a>
+      <a href="about.html"><li class="nav-link">About</li></a>
+      <a href="properties.html"><li class="nav-link">Properties</li></a>
+      <a href="contact.html"><li class="nav-link">Contact</li></a>
+    </div>
 <!-- Main---------------------------------------------------------------->
 <div class="main">
   <div class="content-ctn">
     <div class="main-content">
-      <h2>Deeply intimate experiences with nature</h2>
+      <h2>Our staff live the mountain life</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam incidunt iusto mollitia doloribus consectetur natus.</p>
 
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
   </div>
-  <div class="main-img">
+  <div class="about-img">
     <img 
-    src="/resources/main-img.avif" 
-    alt="main img of mountain cabin" 
-    class="main-img">
+    src="/resources/about-img.avif" 
+    alt="image of rental group staff" 
+    class="about-img">
   </div>
 </div>
 <!-- Main---------------------------------------------------------------->
 <div class="main">
   <div class="content-ctn">
     <div class="main-content">
-      <h2>Deeply intimate experiences with nature</h2>
+      <h2>A company that cares</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam incidunt iusto mollitia doloribus consectetur natus.</p>
-
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere quia eos quam, nobis officiis distinctio?</p>
     </div>
   </div>
   <div class="main-img">
     <img 
-    src="/resources/main-img.avif" 
+    src="/resources/about-office-img.avif" 
     alt="main img of mountain cabin" 
     class="main-img">
   </div>
