--- a/contact.html
+++ b/contact.html
@@ -17,27 +17,33 @@
   <body>
     <div class="page">
 <!-- Nav---------------------------------------------------------------->
-      <nav class="nav">
-        <div class="nav-center">
-          <div class="nav-logo">
-            <img
-              src="/resources/nav-logo.jpg"
-              class="nav-logo"
-              alt="navbar company logo" />
-            <h3>Mountain Rental Properties</h3>
-          </div>
-          <div class="nav-btn">
-            <button>
-              <i class="fa-solid fa-bars"></i>
-            </button>
-          </div>
-      </nav>
-          <div class="nav-links hide">
-            <a href="index.html"><li class="nav-link">Home</li></a>
-            <a href="about.html"><li class="nav-link">About</li></a>
-            <a href="properties.html"><li class="nav-link">Properties</li></a>
-            <a href="contact.html""><li class="nav-link">Contact</li></a>
-          </div>
+<nav class="nav">
+  <div class="nav-center">
+    <div class="nav-logo">
+      <img
+        src="/resources/nav-logo.jpg"
+        class="nav-logo"
+        alt="navbar company logo" />
+      <h3>Mountain Rental Properties</h3>
+    </div>
+    <div class="nav-btn">
+      <button>
+        <i class="fa-solid fa-bars"></i>
+      </button>
+    </div>
+    <div class="nav-links show">
+      <a href="index.html"><li class="nav-link">Home</li></a>
+      <a href="about.html"><li class="nav-link">About</li></a>
+      <a href="properties.html"><li class="nav-link">Properties</li></a>
+      <a href="contact.html"><li class="nav-link">Contact</li></a>
+    </div>
+</nav>
+    <div class="nav-links hide">
+      <a href="index.html"><li class="nav-link">Home</li></a>
+      <a href="about.html"><li class="nav-link">About</li></a>
+      <a href="properties.html"><li class="nav-link">Properties</li></a>
+      <a href="contact.html"><li class="nav-link">Contact</li></a>
+    </div>
   <!-- About ---------------------------------------------------------------->
           <div class="main-about-ctn">
             <div class="about-content">
