finish layout and styling for about and contact

--- a/contact.html
+++ b/contact.html
@@ -78,17 +78,14 @@
 <!-- Main---------------------------------------------------------------->
 <div class="main">
   <div class="content-ctn">
-    <div class="main-content">
-      <h2>Deeply intimate experiences with nature</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam incidunt iusto mollitia doloribus consectetur natus.</p>
-
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <div class="main-content contact">
+      <h2>Your next adventure awaits...</h2>
     </div>
   </div>
-  <div class="main-img">
+  <div class="main-img contact">
     <img 
-    src="/resources/main-img.avif" 
-    alt="main img of mountain cabin" 
+    src="/resources/contact-img.avif" 
+    alt="contact page picture of mountains" 
     class="main-img">
   </div>
 </div>
