--- a/about.html
+++ b/about.html
@@ -61,6 +61,37 @@
     class="about-img">
   </div>
 </div>
+  <!-- About ---------------------------------------------------------------->
+  <div class="main-about-ctn">
+    <div class="about-content">
+      <h2>Want to work with us?</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, natus asperiores. Error obcaecati mollitia dolorum cumque repellat placeat asperiores impedit.</p>
+      <br>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <br><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro veritatis fuga vero iste pariatur a nulla error esse hic, quas, iure molestiae, at similique quis.</p>
+    </div>
+    <form action="submit" class="about-form">
+      <div class="form-row">
+        <label for="fname" class="form-label">Your First Name</label>
+        <input type="text" class="form-input" name="fname" id="fname">
+        <br>
+      </div>
+      <div class="form-row">
+        <label for="lname">Your Last Name</label>
+        <input type="text" class="form-input" name="lname" id="lname">
+        <br>
+      </div>
+      <div class="form-row">
+        <label for="email">Your Email</label>
+        <input type="text" class="form-input" name="email" id="email">
+        <br>
+      </div>
+      <div class="form-row">
+        <label for="message">Your Message</label>
+        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+      </div>
+    </form>
+  </div>
 <!-- Main---------------------------------------------------------------->
 <div class="main">
   <div class="content-ctn">
@@ -78,6 +109,7 @@
     class="main-img">
   </div>
 </div>
+
   <!-- Footer---------------------------------------------------------------->
           <footer class="page-footer">
             <p>
