initial commit properties layout

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
           </div>
   <!-- Main 2---------------------------------------------------------------->
-          <div class="main2">
+          <div class="main">
             <div class="content-ctn">
               <div class="main-content2">
                 <h2>Over 20 properties spread out over dozens of acres of secluded mountain land</h2>
