--- a/properties.html
+++ b/properties.html
@@ -17,34 +17,45 @@
   <body>
     <div class="page">
 <!-- Nav---------------------------------------------------------------->
-<nav class="nav">
-  <div class="nav-center">
-    <div class="nav-logo">
-      <img
-        src="/resources/nav-logo.jpg"
-        class="nav-logo"
-        alt="navbar company logo" />
-      <h3>Mountain Rental Properties</h3>
-    </div>
-    <div class="nav-btn">
-      <button>
-        <i class="fa-solid fa-bars"></i>
-      </button>
-    </div>
-    <div class="nav-links show">
-      <a href="index.html"><li class="nav-link">Home</li></a>
-      <a href="about.html"><li class="nav-link">About</li></a>
-      <a href="properties.html"><li class="nav-link">Properties</li></a>
-      <a href="contact.html"><li class="nav-link">Contact</li></a>
-    </div>
-</nav>
-    <div class="nav-links hide">
-      <a href="index.html"><li class="nav-link">Home</li></a>
-      <a href="about.html"><li class="nav-link">About</li></a>
-      <a href="properties.html"><li class="nav-link">Properties</li></a>
-      <a href="contact.html"><li class="nav-link">Contact</li></a>
-    </div>
-
+      <nav class="nav">
+        <div class="nav-center">
+          <div class="nav-logo">
+            <img
+              src="/resources/nav-logo.jpg"
+              class="nav-logo"
+              alt="navbar company logo" />
+            <h3>Mountain Rental Properties</h3>
+          </div>
+          <div class="nav-btn">
+            <button>
+              <i class="fa-solid fa-bars"></i>
+            </button>
+          </div>
+          <div class="nav-links show">
+            <a href="index.html"><li class="nav-link">Home</li></a>
+            <a href="about.html"><li class="nav-link">About</li></a>
+            <a href="properties.html"><li class="nav-link">Properties</li></a>
+            <a href="contact.html"><li class="nav-link">Contact</li></a>
+          </div>
+      </nav>
+          <div class="nav-links hide">
+            <a href="index.html"><li class="nav-link">Home</li></a>
+            <a href="about.html"><li class="nav-link">About</li></a>
+            <a href="properties.html"><li class="nav-link">Properties</li></a>
+            <a href="contact.html"><li class="nav-link">Contact</li></a>
+          </div>
+<!-- grid ctn---------------------------------------------------------------->
+          <div class="grid-ctn">
+            <div class="grid-1"></div>
+            <div class="grid-2"></div>
+            <div class="grid-3"></div>
+            <div class="grid-4"></div>
+            <div class="grid-5"></div>
+            <div class="grid-6"></div>
+            <div class="grid-7"></div>
+            <div class="grid-8"></div>
+            <div class="grid-9"></div>
+          </div>
   <!-- Footer---------------------------------------------------------------->
           <footer class="page-footer">
             <p>
@@ -54,7 +65,7 @@
               <a href="https://github.com/tcurtis14002">Tyler Curtis</a>
             </p>
           </footer>
-    </div>
+          </div>
     <script src="app.js"></script>
   </body>
 </html>
