add properties page image, text placeholder

--- a/properties.html
+++ b/properties.html
@@ -46,15 +46,51 @@
           </div>
 <!-- grid ctn---------------------------------------------------------------->
           <div class="grid-ctn">
-            <div class="grid-1"></div>
-            <div class="grid-2"></div>
-            <div class="grid-3"></div>
-            <div class="grid-4"></div>
-            <div class="grid-5"></div>
-            <div class="grid-6"></div>
-            <div class="grid-7"></div>
-            <div class="grid-8"></div>
-            <div class="grid-9"></div>
+            <div class="grid grid1">
+              <img src="/resources/grid-1-img.avif" alt="mountain property image">
+              <h2>Property Name</h2>
+              <p>Property Location || Keynote </p>
+            </div>
+            <div class="grid grid2">
+              <img src="/resources/grid-2-img.avif" alt="mountain property image">
+              <h2>Property Name</h2>
+              <p>Property Location || Keynote </p>
+            </div>
+            <div class="grid grid3">
+              <img src="/resources/grid-3-img.avif" alt="mountain property image">
+              <h2>Property Name</h2>
+              <p>Property Location || Keynote </p>
+            </div>
+            <div class="grid grid4">
+              <img src="/resources/grid-4-img.avif" alt="mountain property image">
+              <h2>Property Name</h2>
+              <p>Property Location || Keynote </p>
+            </div>
+            <div class="grid grid5">
+              <img src="/resources/grid-5-img.avif" alt="mountain property image">
+              <h2>Property Name</h2>
+              <p>Property Location || Keynote </p>
+            </div>
+            <div class="grid grid6">
+              <img src="/resources/grid-6-img.avif" alt="mountain property image">
+              <<h2>Property Name</h2>
+              <p>Property Location || Keynote </p>
+            </div>
+            <div class="grid grid7">
+              <img src="/resources/grid-7-img.avif" alt="mountain property image">
+              <h2>Property Name</h2>
+              <p>Property Location || Keynote </p>
+            </div>
+            <div class="grid grid8">
+              <img src="/resources/grid-8-img.avif" alt="mountain property image">
+              <h2>Property Name</h2>
+              <p>Property Location || Keynote </p>
+            </div>
+            <div class="grid grid9">
+              <img src="/resources/grid-9-img.avif" alt="mountain property image">
+              <h2>Property Name</h2>
+              <p>Property Location || Keynote </p>
+            </div>
           </div>
   <!-- Footer---------------------------------------------------------------->
           <footer class="page-footer">
