update grid layout for properties page

--- a/properties.html
+++ b/properties.html
@@ -45,7 +45,8 @@
             <a href="contact.html"><li class="nav-link">Contact</li></a>
           </div>
 <!-- grid ctn---------------------------------------------------------------->
-          <div class="grid-ctn">
+          <div class="ctn">
+            <div class="grid-ctn">
             <div class="grid grid1">
               <img src="/resources/grid-1-img.avif" alt="mountain property image">
               <h2>Property Name</h2>
@@ -92,6 +93,7 @@
               <p>Property Location || Keynote </p>
             </div>
           </div>
+        </div>
   <!-- Footer---------------------------------------------------------------->
           <footer class="page-footer">
             <p>
